# tubular

./: .gitignore  README.md  clean-workspace.sh  hatch_build.py  pyproject.toml  run-ctrl.sh  run-node.sh  run_ctrl.sh  run_node.sh  tubular.yaml
config_templates/: controller.yaml  node.yaml
docker/: base.docker  build.sh  ctrl.docker  node.docker  tubular.yaml
pipelines/: task.yaml  test.yaml
tubular/: configLoader.py  config_loader.py  constantManager.py  controller.py  enums.py  file_utils.py  git_cmds.py  pipeline.py  pipeline_db.py  repo.py  stage.py  step.py  task.py  taskEnv.py  task_env.py  tempManager.py  trigger.py  yaml.py
tubular-frontend/: README.md  index.html  package-lock.json  package.json
tubular-frontend/src/: App.vue  enums.js  main.js  path_utils.js
tubular-frontend/src/assets/: colors.css  main.css
tubular-frontend/src/components/: Archive.vue  Homepage.vue  Nodes.vue  Output.vue  PipelineHistory.vue  Pipelines.vue  RunPipeline.vue  Tree.vue  TreeNode.vue  ViewRun.vue
tubular-frontend/src/components/graphs/: NodeDoughnut.vue  PrevRunsDoughnut.vue
tubular/node/: node_main.py  node_state.py
tubular_controller/: __main__.py  archiveLister.py  controller.py  controller_router.py  main.py  nodeConnection.py  taskQueue.py
tubular_node/: __main__.py  main.py  node.py  node_router.py
