[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tubular"
dynamic = ["version"]
authors = [{ name = "Alagyn" }]
description = "A lightweight CI/CD framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["fastapi>=0.112.1", "pyyaml>=6.0.2"]

[project.urls]
"Homepage" = "https://github.com/alagyn/tubular"
"Bug Tracker" = "https://github.com/alagyn/tubular/issues"

[tool.hatch.version]
path = "tubular/version.py"

[tool.hatch.build.targets.wheel]
packages = ["tubular"]

[tool.hatch.build.targets.sdist]
only-include = ["tubular"]
