[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tubular"
dynamic = ["version"]
authors = [{ name = "Alagyn" }]
description = "A lightweight CI/CD framework"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.112.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "uvicorn[standard]>=0.32.0",
]

[project.urls]
"Homepage" = "https://github.com/alagyn/tubular"
"Bug Tracker" = "https://github.com/alagyn/tubular/issues"

[tool.hatch.version]
path = "tubular/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "tubular",
    "tubular_controller",
    "tubular_node",
    "tubular-frontend/dist/**",
]
artifacts = ["tubular-frontend/dist/**"]

# [tool.hatch.build.targets.wheel.sources]
# "tubular-frontend/dist" = "tubular-frontend/dist"

[tool.hatch.build.targets.sdist]
include = ["tubular", "tubular_controller", "tubular_node", "tubular-frontend"]
exclude = ["*/node_modules/*", "*/dist/*"]

[tool.hatch.build.targets.wheel.hooks.custom]
# ILB, causes hatch_build.py to run
